# yagna-docker

./: README.md
provider/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  gen_compose.py  node_env.env  pyproject.toml  run_no_module.py  web-commands.py
provider/panel/: __init__.py  __main__.py  proc.py  server.py
provider/panel/templates/: log.css  log.html  log.js  panel.css  panel.html  panel.js
provider/scripts/: clean-fees.sh  ids.sh  status.sh
provider/templates/: panel.html
purelog/: log.html  log.js
requestor/: docker-compose.yml
requestor/plain/: .gitignore  Dockerfile  README.md  docker-compose.yml  node_env.env
requestor/yapapi/: run_blender.py
