[tool.poetry]
name = "providers"
version = "0.1.0"
description = ""
authors = ["scx1332 <sieciech.czajka@golem.network>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
jinja2 = "^3.0.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "24.4"
flake8 = "7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

z